@@ -1168,6 +1168,17 @@
                         <dependency type="visible" setting="smartplay.playingnextdialog">true</dependency>
                     </dependencies>
                 </setting>
+				<setting id="playingnext.defaultaction" type="integer" label="30325" help="">
+					<level>0</level>
+					<default>0</default>
+					<constraints>
+						<options>
+                            <option label="30326">0</option>
+                            <option label="30327">1</option>
+						</options>
+					</constraints>
+					<control type="spinner" format="string"/>
+				</setting>
             </group>
         </category>
 
